--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ gap:0em;
 background-image: linear-gradient(25deg,red, blue)
 }
 
-.textshadow{
+.textshadowred{
 text-shadow:10px 10px .15em rgb(205, 41, 41);
 }
 
