--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Lato&display=swap');
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
@@ -11,7 +11,7 @@ html{
     font-family: 'Lato', sans-serif;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
 
@@ -24,24 +24,26 @@ header {
     background-color: white;
 
 }
-header .navbar ul{
+
+header .navbar ul {
     display: flex;
     gap: 0.2em;
     align-items: center;
-    justify-content:space-evenly;
-    list-style:none;
+    justify-content: space-evenly;
+    list-style: none;
 
 }
-header .navbar ul .logo img{
-     width: 12vh;
-     transition: all .5s;
-     -webkit-transition: all .5s;
-     -moz-transition: all .5s;
-     -ms-transition: all .5s;
-     -o-transition: all .5s;
+
+header .navbar ul .logo img {
+    width: 12vh;
+    transition: all .5s;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
 }
 
-header .navbar ul .logo img:hover{
+header .navbar ul .logo img:hover {
     width: 13vh;
     transition: all .5s;
     -webkit-transition: all .5s;
@@ -50,7 +52,7 @@ header .navbar ul .logo img:hover{
     -o-transition: all .5s;
 }
 
-header .navbar ul .links a{
+header .navbar ul .links a {
     color: black;
     text-decoration: none;
     position: relative;
@@ -61,7 +63,8 @@ header .navbar ul .links a{
     -ms-transition: all .5s;
     -o-transition: all .5s;
 }
-header .navbar ul .links a:hover{
+
+header .navbar ul .links a:hover {
     color: black;
     position: relative;
     text-decoration: none;
@@ -72,6 +75,7 @@ header .navbar ul .links a:hover{
     -ms-transition: all .5s;
     -o-transition: all .5s;
 }
+
 header .navbar ul .links a:hover::before {
     content: "";
     width: 100%;
@@ -79,7 +83,8 @@ header .navbar ul .links a:hover::before {
     position: absolute;
     border-radius: 25px;
     bottom: 0;
-    left: 50%;transform: translateX(-50%);
+    left: 50%;
+    transform: translateX(-50%);
     transition: all 0.5s;
     background-color: rgb(0, 0, 0);
     -webkit-border-radius: 25px;
@@ -104,13 +109,14 @@ header .navbar ul .links a::before {
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
 }
-header .navbar ul .links{
+
+header .navbar ul .links {
     display: flex;
     gap: 0.5em;
 }
 
 @media screen and (max-width:500px) {
-    header .navbar ul .links{
+    header .navbar ul .links {
         display: block;
     }
 }
@@ -178,56 +184,54 @@ p {
     font-weight: bold;
 }
 
-.aboutme{
-display: grid;
-gap:0em;
-background-image: linear-gradient(25deg,red, blue)
+.aboutme {
+    background-image: linear-gradient(25deg, red, blue)
 }
 
-.textshadowred{
-text-shadow:10px 10px .15em rgb(205, 41, 41);
+.textshadowred {
+    text-shadow: 10px 10px .15em rgb(205, 41, 41);
 }
 
-.whitecolor{
-    color:white;
+.whitecolor {
+    color: white;
 }
 
-.instagramlogo{
+.instagramlogo {
     width: 4vh;
     text-align: center;
 }
 
-.discordlogo{
+.discordlogo {
     width: 4vh;
 }
-.discordbackground{
+
+.discordbackground {
     background: linear-gradient(135deg, #5865F2, #7587DA, #9B9ED4, #B4BBCB);
 }
 
-.footer{
+.footer {
     padding: 25px;
     min-height: 15vh;
     background-color: rgb(255, 255, 255);
 }
 
-.footer .link{
-text-align: center;
-display: flex;
-padding: 25px;
-color:white;
-margin-top: 5px;
-gap: 0.9vh;
-text-decoration: none;
-align-items: center;
-justify-content: center;
+.footer .link {
+    text-align: center;
+    display: flex;
+    padding: 25px;
+    color: white;
+    margin-top: 5px;
+    gap: 0.9vh;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
 
 }
 
-.instagrambackground{
+.instagrambackground {
     background: linear-gradient(45deg, #405DE6, #5851DB, #833AB4, #C13584, #FD1D1D, #F56040, #F77737, #FCAF45);
 }
 
-.footer .creditos{
+.footer .creditos {
     text-align: center;
 }
-
